--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Домашнее задание к лекции «Контейнеры»</title>
+    <title>Домашнее задание к лекции «Promises, async/await»</title>
 </head>
 <body>
-    <h1>Домашнее задание к лекции «Контейнеры»</h1>
+    <h1>Домашнее задание к лекции «Promises, async/await»</h1>
     
 </body>
 </html>
